--- a/app/src/main/res/layout/chatting_item_msg_text_left.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_left.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:id="@+id/tv_sendtime"
-            style="@style/chat_text_date_style"
+            android:textColor="#8f8f8f"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -26,8 +26,8 @@
 
         <ImageView
             android:id="@+id/iv_userhead"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/timg"
@@ -37,7 +37,7 @@
             android:id="@+id/tv_chatcontent"
             style="@style/chat_content_date_style"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/iv_userhead"
             android:background="@drawable/chatfrom_bg" />
@@ -47,6 +47,7 @@
             style="@style/chat_text_name_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="12dp"
             android:layout_alignParentLeft="true"
             android:layout_below="@id/iv_userhead"
             android:layout_toLeftOf="@id/tv_chatcontent" />
