--- a/app/src/main/res/layout/page_02.xml
+++ b/app/src/main/res/layout/page_02.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-    <TextView
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:id="@+id/listview"/>
+
+    <!--<com.example.tr.tourhear.utils.SideBarViews
+        android:id="@+id/sidebarview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="好友"
-        android:textSize="30dp" />
+        android:layout_alignParentRight="true"
+        />-->
+
+    <com.example.tr.tourhear.utils.SideBarView
+        android:id="@id/sidebarview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"/>
+
+    <TextView
+        android:id="@+id/tip"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:text="A"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:background="@drawable/item_tip_bg"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
