--- a/app/src/main/res/layout/activity_bottom.xml
+++ b/app/src/main/res/layout/activity_bottom.xml
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:text="分享"
+            android:text="发现"
             android:textColor="#4D4D4D"
             android:textStyle="bold" />
     </LinearLayout>
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:text="设置"
+            android:text="我"
             android:textColor="#4D4D4D"
             android:textStyle="bold" />
     </LinearLayout>
