--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -24,6 +24,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
